fix: add ddl-auto property & fix format_sql property

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     password:
     driver-class-name: org.postgresql.Driver
   jpa:
-    hibernate: create-drop
+    hibernate.ddl-auto: create-drop
     show-sql: true
-    properties.hibernate.format-sql: true
+    properties.hibernate.format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   output.ansi.enabled: always
